src/Components/NavBar/Nav.css
@font-face {
  font-family:LouisVuitton-Medium ;
  src: url(./../../Font/LouisVuitton-Medium.woff2);
}

@font-face {
  font-family:LouisVuitton-Regular ;
  src: url(./../../Font/LouisVuitton-Regular.woff2);
}

/* General Styles */
body {
    margin: 0;
    font-family: Arial, sans-serif;
  }
  
  .nav__bar {
    width: 100%;
    background-color: #fff;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
    position: fixed;
    top: 0;
    z-index: 1000;
  }
  
  .logo__image {
    height: 58px;
  }
  
  .navbar__hamburger {
    display: flex;
    align-items: center;
    cursor: pointer;
    background: none;
    border: none;
    margin-right: -24px;
    margin-bottom: -1px;
  }
  
  .navbar__hamburger .bi {
    font-size: 25px;
    color: #000;
  }
  
  .navbar__menu {
    list-style: none;
    display: flex;
    gap: 20px;
    margin: 0;
    padding: 0;
  }
  
  .navbar__menuitem {
    text-decoration: none;
    font-family: "LouisVuitton-Medium", sans-serif;
    color: #333;
    font-weight: 500;
  }
  
  .navbar__text {
    font-size: 15px;
    font-family: "LouisVuitton-Medium", sans-serif;

    margin-right: 15px;
  }
  
  .navbar__icon {
    font-size: 25px;
  }
  
  /* Responsive Styles */
  @media screen and (max-width: 768px) {
    .navbar__menu {
      flex-direction: column;
      background-color: #fff;
      position: absolute;
      top: 60px;
      left: 0;
      width: 100%;
      border-top: 1px solid #ddd;
      display: none;
    }
  
    .navbar__menuitem {
      text-align: left;
      font-family: "LouisVuitton-Medium", sans-serif;
      padding: 10px 20px;
      border-bottom: 1px solid #ddd;
    }
  
    .navbar__menu.open {
      display: flex;
    }
  }
  
  .search__bar {
    display: flex;
    align-items: center;
  }
  
  .search__bar .bi {
    font-size: 25px;
    margin-top: 5px;
  }
  
  .call-us-link {
    display: flex;
    align-items: center;
    text-decoration: none;
    color: #333;
  }
  
  .call-us-link .bi {
    font-size: 18px;
  }
  
  @media only screen and (max-width: 767px) and (orientation: portrait) {
    .navbar__text {
      font-size: 10px;
    }
    .bi-search::before {
      content: "\f52a";
      margin-left: 17px;
  }
  .logo__image {
    height: 30px;
  }
  .align-items-center {
    margin-right: 1px;
    align-items: center !important;
  }
  .call-us-link .bi {
    font-size: 22px;
  }

  }

